--- a/Team Project/supplies-style.css
+++ b/Team Project/supplies-style.css
@@ -1,6 +1,6 @@
 
 body {
-  font-family: 'Love Ya Like A Sister', cursive; font-size: 1.1em;
+  font-family: 'Do Hyeon', sans-serif; font-size: 1.1em;
     margin: 0;
     padding: 0;
     background-color: #f2f2f2;
