--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Reset and Base Styles */
 body {
     margin: 0;
     padding: 0;
@@ -10,12 +9,8 @@ p {
     line-height: 1.6;
 }
 
-
-/* General Styles */
 .highlight {
     color: orangered;
-    margin: 0;
-    padding: 0;
 }
 
 .dark {
@@ -37,11 +32,6 @@ p {
     }
 }
 
-/* Header Styles */
-.main header {
-    border-bottom: #e8491d 3px solid;
-}
-
 header .navbar {
     padding: 20px;
 }
@@ -55,7 +45,6 @@ header a:hover {
     font-weight: bold;
 }
 
-/* Showcase Styles */
 #showcase {
     min-height: 400px;
     background: url("img/컴퓨터_프로그래밍_언어.jpg") no-repeat center center/cover;
@@ -73,38 +62,28 @@ header a:hover {
     font-size: 20px;
 }
 
-/* Sidebar Styles */
 aside#sidebar {
     float: right;
     width: 30%;
     margin-top: 20px;
 }
 
-/* Boxes */
-#boxes {
-    margin-top: 20px;
-}
-
-#boxes .box {
-    float: left;
-    text-align: center;
-    width: 30%;
-    padding: 10px;
-}
-
-/* Image Styles */
-#html img, #css img, #bootstrap img, #tailwind img {
+#html img,
+#css img,
+#bootstrap img,
+#tailwind img {
     width: 100%;
     height: auto;
     cursor: pointer;
     margin-bottom: 20px;
     border-radius: 5px;
-    transition: transf  orm 0.3s;
+    transition: transform 0.3s;
 }
 
-
-
-#html img:hover, #css img:hover, #bootstrap img:hover, #tailwind img:hover {
+#html img:hover,
+#css img:hover,
+#bootstrap img:hover,
+#tailwind img:hover {
     transform: scale(1.05);
 }
 
@@ -116,15 +95,6 @@ aside#sidebar {
     max-width: 170px;
 }
 
-#porais {
-    max-width: 400px;
-}
-
-#AI {
-    max-width: 600px;
-}
-
-/* Footer Styles */
 footer {
     text-align: center;
     padding: 20px 0;
@@ -133,7 +103,6 @@ footer {
     margin-top: 40px;
 }
 
-/* Team Project Styles */
 .team-container {
     display: flex;
     flex-direction: column;
@@ -148,17 +117,13 @@ footer {
     padding: 20px;
 }
 
-/* About Page Styles */
 .about_container {
     display: grid;
     grid-template-rows: auto auto;
     grid-gap: 20px;
-    padding-top: 20px;
+    padding-top: 50px;
     text-align: center;
-}
-
-#about {
-    border-bottom: deepskyblue 3px solid;
+    border-bottom: deepskyblue 5px solid;
 }
 
 .about-content {
@@ -167,7 +132,6 @@ footer {
     border-bottom: deepskyblue 3px solid;
 }
 
-/* Table Styles */
 table {
     width: 100%;
     border-collapse: collapse;
@@ -183,17 +147,32 @@ th {
     background-color: #f2f2f2;
 }
 
-/* Main Column */
-article#main-col {
-    float: left;
-    width: 65%;
-}
-
-/* Service List */
 ul#service li {
     list-style: none;
     padding: 20px;
     border: 2px solid #ccccccd6;
     background-color: #e6e6e6;
     margin-bottom: 5px;
+}
+
+#screen {
+    width: 800px;
+    height: 600px;
+    text-align: center;
+    user-select: none;
+    margin-left: 200px;
+    margin-top: 150px;
+}
+
+#screen.waiting {
+    background-color: aqua;
+}
+
+#screen.ready {
+    background-color: red;
+    color: white;
+}
+
+#screen.now {
+    background-color: greenyellow;
 }
